example 2:pass a Item list

--- a/app/views/listContainer.scala.html
+++ b/app/views/listContainer.scala.html
@@ -1,10 +1,12 @@
-@(header:Html)(level:Int,items:Seq[String])(footer:Html)
+@(header:Html)(level:Int,items:Seq[Item])(footer:Html)
+
+@import models.Item
 
 <div style="margin-left":@{5*level}%>
     @header
-    <ul id="list@level" style="margin-left":@{5*level}%>
+    <ul id="list@level">
         @items.map{item=>
-            <li>@item</li>
+            @listItem(item)
         }
     </ul>
     @footer
