--- a/app/views/data.scala.html
+++ b/app/views/data.scala.html
@@ -1,14 +1,40 @@
-@(user:Option[User])
+@(userForm:Form[User])
 
 @main("Data tests"){
-    @if(user.isDefined){
-        <h1>@user.get.name</h1>
+    @if(userForm.value.isDefined){
+        <h1>@userForm.get.name
+            (@userForm.get.age)</h1>>
+        <h2>Lives at @userForm.get.address.fullStreet</h2>
     }else{
         <h1>Feed some data</h1>
 
-        <form method="GET" action="/data/post">
-            <input type="text" name="name">
-            <input type="button" name="send" value="Feed"/>
-        </form>
+        @helper.form(action=routes.Data.post()){
+
+            @helper.inputText(userForm("name"))
+
+            @helper.input(userForm("age")){ (id,name,value,args) =>
+                <input type="number" name="@name" id="@id" @toHtmlArgs(args)>
+            }
+            @helper.checkbox(userForm("female"))
+
+            <fieldset>
+                <legend>Address</legend>
+
+                @helper.inputText(userForm("address.fullStreet"))
+
+                @helper.inputText(
+                    userForm("address.county"),
+                    '_label -> "County"
+                )
+
+                @helper.select(userForm("address.country"),Seq(
+                    "" -> "---",
+                    "AR" -> "Arda",
+                    "BE" -> "Belgium",
+                    "SL" -> "Smurfs Land")
+                )
+            </fieldset>
+            <input type="submit" name="send" value="Feed"/>
+        }
     }
 }
